# deeplearning-ai-agentic-cource

./: .pre-commit-config.yaml  CLAUDE.md  main.py  pyproject.toml
chart-gen-reflection-pattern/: M2_UGL_1.ipynb  utils.py
reflection/chart-generation/: M2_UGL_1.ipynb
reflection/sql-generation/: M2_UGL_2.ipynb  README.md  products.db
tool-use/email_assistant_workflow/: M3_UGL_2.ipynb
tool_use/email_server/: llm_service.py
